--- a/noaa.html
+++ b/noaa.html
@@ -408,6 +408,53 @@ data &lt;- read.csv(&quot;noaa.csv.bz2&quot;)</code></pre>
 <pre class="r"><code>data$YEAR &lt;- year(mdy_hms(data$BGN_DATE)) 
 new_df &lt;- data[data$YEAR &gt; 1995,]</code></pre>
 </div>
+<div id="cleaning-the-event-type-names" class="section level4">
+<h4>Cleaning the event type names</h4>
+<p>The event names are not all coded in the same way, so I created a new variable, event, that has all lower case letters and standardized event names by making the following transformations:</p>
+<ul>
+<li>tolower was used to change the event names to lower case</li>
+<li>grepl was used to find the index of for all variations of a specific event type</li>
+<li>the index was used to replace all variations with the official name, as stated in the documentation.[<a href="https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf" class="uri">https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf</a>]</li>
+</ul>
+<pre class="r"><code>new_df$event &lt;- tolower(new_df$EVTYPE)
+
+official_event_names &lt;- tolower(c(&quot;Astronomical Low Tide&quot;, &quot;Avalanche,     Blizzard&quot;, &quot;Coastal Flood&quot;,&quot;Cold/Wind Chill&quot;, &quot;Debris Flow&quot;, &quot;Dense Fog&quot;, &quot;Dense Smoke&quot;, &quot;Drought&quot;, &quot;Dust Devil&quot;, &quot;Dust Storm&quot;, &quot;Excessive Heat&quot;, &quot;Extreme Cold/Wind Chill&quot;, &quot;Flash Flood&quot;, &quot;Flood&quot;, &quot;Frost/Freeze&quot;, &quot;Funnel Cloud&quot;,  &quot;Freezing Fog&quot;, &quot;Hail&quot;, &quot;Heat&quot;, &quot;Heavy Rain&quot;, &quot;Heavy Snow&quot;,  &quot;High Surf&quot;, &quot;High Wind&quot;, &quot;Hurricane/Typhoon&quot;, &quot;Ice Storm&quot;, &quot;Lake-Effect-Snow&quot;, &quot;Lakeshore Flood&quot;, &quot;Lightning&quot;,  &quot;Marine Hail&quot;, &quot;Marine High Wind&quot;, &quot;Marine Strong Wind&quot;, &quot;Marine Thunderstorm Wind&quot;, &quot;Rip Current&quot;, &quot;Seiche&quot;, &quot;Sleet&quot;,
+ &quot;Storm Surge/Tide&quot;, &quot;Strong Wind&quot;, &quot;Thunderstorm Wind&quot;, &quot;Tornado&quot;, &quot;Tropical Depression&quot;, &quot;Tropical Storm&quot;,  &quot;Tsunami&quot;, &quot;Volcanic Ash&quot;, &quot;Waterspout&quot;, &quot;Wildfire&quot;,  &quot;Winter Storm&quot;, &quot;Winter Weather&quot;))</code></pre>
+<pre class="r"><code>a &lt;- grepl(&quot;ashfall&quot;, new_df$event)
+c &lt;- grepl(&quot;coastal flood&quot;, new_df$event)
+cf &lt;- grepl(&quot;cstl flood&quot;, new_df$event)
+cd &lt;- grepl(&quot;[Cc]old&quot;, new_df$event)
+f &lt;- grepl(&quot;flash&quot;, new_df$event)
+fz &lt;- grepl(&quot;freeze&quot;, new_df$event)
+fr &lt;- grepl(&quot;freezing rain&quot;, new_df$event)
+h &lt;- grepl(&quot;hail&quot;, new_df$event)
+hr &lt;- grepl(&quot;hurricane&quot;, new_df$event)
+l &lt;- grepl(&quot;lake effect&quot;, new_df$event)
+s &lt;- grepl(&quot;snow&quot;, new_df$event)
+sg &lt;- grepl(&quot;surge&quot;, new_df$event)
+sf &lt;- grepl(&quot;surf&quot;, new_df$event)
+t &lt;- grepl(&quot;typhoon&quot;, new_df$event)
+ts &lt;- grepl(&quot;tstm&quot;, new_df$event)
+wc &lt;- grepl(&quot;windchill&quot;, new_df$event)</code></pre>
+<pre class="r"><code>library(stringr)
+new_df$event[a == TRUE] &lt;- &quot;volcanic ash&quot;
+new_df$event[c == TRUE | cf == TRUE] &lt;- &quot;coastal flood&quot;
+new_df$event[c == TRUE] &lt;- &quot;extreme cold/wind chill&quot;
+new_df$event[wc == TRUE] &lt;- &quot;extreme cold/wind chill&quot;
+new_df$event[f == TRUE] &lt;- &quot;flash flood&quot;
+new_df$event[fr == TRUE] &lt;- &quot;sleet&quot;
+new_df$event[fz == TRUE] &lt;- &quot;frost/freeze&quot;
+new_df$event[h == TRUE] &lt;- &quot;hail&quot;
+new_df$event[l == TRUE] &lt;- &quot;lake-effect&quot;
+new_df$event[sf == TRUE] &lt;- &quot;high surf&quot;
+new_df$event[s == TRUE] &lt;- &quot;heavy snow&quot;
+new_df$event[sg == TRUE] &lt;- &quot;storm surge/tide&quot;
+new_df$event[t == TRUE | hr == TRUE] &lt;- &quot;hurricane/typhoon&quot;
+new_df$event[ts == TRUE] &lt;- &quot;tsunami&quot;
+new_df$event &lt;- str_replace(new_df$event, &quot;strong winds&quot;, &quot;strong wind&quot;)
+new_df$event &lt;- str_replace(new_df$event, &quot;rip currents&quot;, &quot;rip current&quot;)
+new_df$event &lt;- str_replace_all(new_df$event, &quot;high wind (g40)&quot;, &quot;high wind&quot;)</code></pre>
+</div>
 </div>
 </div>
 
