--- a/noaa.html
+++ b/noaa.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Me" />
+<meta name="author" content="Kathryn Fahnline" />
 
 
 <title>noaa_project</title>
@@ -373,7 +373,7 @@ summary {
 
 
 <h1 class="title toc-ignore">noaa_project</h1>
-<h4 class="author">Me</h4>
+<h4 class="author">Kathryn Fahnline</h4>
 <h4 class="date">4/12/2021</h4>
 
 </div>
@@ -462,11 +462,11 @@ new_df$event &lt;- str_replace_all(new_df$event, &quot;high wind (g40)&quot;, &q
 new_df$event &lt;- str_replace_all(new_df$event, &quot;dust devel&quot;, &quot;dust devil&quot;)
 new_df$event &lt;- str_replace_all(new_df$event, &quot;ice fog&quot;, &quot;freezing fog&quot;)</code></pre>
 <p>There are some event names that are are not clearly in one of the standarized event types. I decided to delete this instances from the data base. I checked to see which events did not match the official list after the above standardization.</p>
-<pre class="r"><code>bad_names &lt;- setdiff(new_df$event, official_event_names)
+<pre class="r"><code>library(dplyr)
+bad_names &lt;- setdiff(new_df$event, official_event_names)
 new_df &lt;- filter(new_df, event %in% official_event_names)</code></pre>
 <p>Filter data set to exclude rows w/ either missing data for PROPDMGEXP or CROPDMGEXP</p>
-<pre class="r"><code>library(dplyr)
-econ_df &lt;- new_df[new_df$CROPDMGEXP != &quot;&quot; | 
+<pre class="r"><code>econ_df &lt;- new_df[new_df$CROPDMGEXP != &quot;&quot; | 
                         new_df$PROPDMGEXP != &quot;&quot;, ]</code></pre>
 <p>Function to adjust for different units in CROPDMGEXP and PROPDMGEXP</p>
 <pre class="r"><code>transform &lt;- function (x, y) {
@@ -490,16 +490,30 @@ econ_df &lt;- new_df[new_df$CROPDMGEXP != &quot;&quot; |
 econ_df$units_adj_propdmg &lt;- mapply(transform, 
                 econ_df$PROPDMGEXP, econ_df$PROPDMG)</code></pre>
 <p>Find summary statistics by year for each event type.</p>
-<pre class="r"><code>econ_damage &lt;- econ_df %&gt;% group_by(YEAR, event) %&gt;% 
-        summarize(average_crop_damage = mean(units_adj_cropdmg),
-                  median_crop_damage = median(units_adj_cropdmg),
-                  total_crop_damage = sum(units_adj_cropdmg),
-                  average_property_damage = mean(units_adj_propdmg),
-                  median_property_damage = median(units_adj_propdmg),
-                  total_property_damage = sum(units_adj_propdmg) )</code></pre>
-<pre><code>## `summarise()` has grouped output by &#39;YEAR&#39;. You can override using the `.groups` argument.</code></pre>
-<pre class="r"><code>library(xtable)
-xt &lt;- xtable(summary(econ_damage))</code></pre>
+<pre class="r"><code>econ_damage &lt;- econ_df %&gt;% group_by(event) %&gt;% 
+                  summarize(total_property_damage = sum(units_adj_propdmg),
+                  total_crop_damage = sum(units_adj_cropdmg) )
+table &lt;- econ_damage %&gt;% arrange(desc(total_property_damage, total_crop_damage)) %&gt;% top_n(10)</code></pre>
+<pre><code>## Selecting by total_crop_damage</code></pre>
+<pre class="r"><code>library(knitr)
+knit_table &lt;- kable(table, caption=&quot;Top Ten Most Costly Weather types, by Property and Crop Damage&quot;)
+print(knit_table, )</code></pre>
+<pre><code>## 
+## 
+## Table: Top Ten Most Costly Weather types, by Property and Crop Damage
+## 
+## |event             | total_property_damage| total_crop_damage|
+## |:-----------------|---------------------:|-----------------:|
+## |flood             |          143944833550|        4974778400|
+## |hurricane/typhoon |           81718889010|        5350107800|
+## |flash flood       |           15222268910|        1334901700|
+## |hail              |           14595237420|        2496822450|
+## |tropical storm    |            7642475550|         677711000|
+## |high wind         |            5247860360|         633561300|
+## |tsunami           |            4680424440|         618631600|
+## |drought           |            1077153400|       14707331500|
+## |heavy rain        |             585168440|         738419800|
+## |frost/freeze      |              18680000|        1326761000|</code></pre>
 </div>
 </div>
 </div>
